2019-April-27 Struan Robertson

		* uTST.cpp, PhaseIntegrals.h/.cpp: Potential interface class added for uFTST. 

2019-April-27 Struan Robertson

		* uTST.cpp, PhaseIntegrals.h/.cpp: uTST method added for non-linear top and atom. 

2019-April-13 Struan Robertson
		
		* ClassicalCoupledRotors.cpp: Fix for sin potential bug in coupled rotors.

2019-April-07 Struan Robertson
		
		* Eckart.cpp: Added bool flag to control barrier height definitions (i.e. classical 
		or QM).

2019-March-31 Struan Robertson
		
		* MesmerFlags.h/.cpp, ConditionsManager.cpp, FittingUtils.cpp, System.cpp: 
		Modifications to allow for the updated of trace weights.

2019-March-24 Struan Robertson
		
		* uTST.cpp, PhaseIntegrals.h: Initial class structure for uTST. 

		* UnitConversion.cpp/.h: Add a map for length.

		* DensityOfStates.cpp/.h: Add a helper function to return the rotational type.

2019-January-16 Robin Shannon

		* EckartCoefficients.cpp, Documentation: Fix to treat PseudoIsomerisation correctly 
		with tunnelling. Minor Eckart correction to documentation.

2018-December-24 Struan Robertson
		
		* main.cpp, Documentation: Copyright update. 

2018-December-15 Struan Robertson
		
		* System.cpp, defaults.xml, mesmer.xsd: Updated schema to include new keywords. 

2018-December-01 Struan Robertson
		
		* AnalyticalRepresentation.cpp: Tidying up of analytical representation method. 

2018-December-01 Struan Robertson
		
		* MesmerEnv.h/.cpp, System.cpp, MicroRate.cpp: Changes to temperature limits on the
		canonical rate coefficient test function. 

2018-November-25 Struan Robertson
		
		* AnalyticalRepresentation.cpp, ThermodynamicTable.cpp, ThermodynamicUtils.h/.cpp: 
		Refactoring of thermodynamic table output methods to base class. 

2018-November-25 Struan Robertson
		
		* MesmerEnv.h/.cpp, System.cpp, MicroRate.cpp: Added temperature limits to the
		canonical rate coefficient test function. 

		* Baseline updated.

2018-November-18 Struan Robertson
		