@@ -16,67 +16,6 @@
 
 namespace mesmer
 {
-  class FTSTPotential {
-
-  public:
-
-    virtual void initialize(double rxnCrd) = 0;
-
-    virtual double MEPPotential(double rxnCrd) = 0;
-
-    virtual double HinderingPotential(double rxnCrd) = 0;
-
-  };
-
-  class HirstWardlawPotential : public FTSTPotential {
-
-  public:
-
-    HirstWardlawPotential() : m_V0(0.0),
-      m_currentRxnCrd(-1.0),
-      m_threshold(0.0) {}
-    virtual ~HirstWardlawPotential() {}
-
-    void initialize(double rxnCrd) {
-      double ant = getConvertedEnergy("kcal/mol", 164.0);
-      double bnt = 0.43;
-      m_V0 = ant * exp(-bnt * rxnCrd*rxnCrd);
-    }
-
-    virtual double MEPPotential(double rxnCrd) {
-      double potential(0.0);
-
-      double A3 = -1.017234e-03; // Hirst Surface parameters as fit by Hase et al.
-      double A2 = 7.7738886e-02; // A3, A2, A1, AO parameters of the variable
-      double A1 = 7.703640e-02;  // beta of the Modified Morse function.
-      double A0 = 1.686690e0;    // 
-
-      double delR  = rxnCrd - 1.0015;
-      double delR2 = delR * delR;
-      double delR3 = delR * delR2;
-
-      double bb = A3 * delR3 + A2 * delR2 + A1 * delR + A0;
-      double tmp = 1.0 - exp(-bb * delR);
-      potential = m_threshold * tmp*tmp;
-
-      return potential;
-
-    }
-
-    virtual double HinderingPotential(double rxnCrd, double gamma) {
-      if (rxnCrd != m_currentRxnCrd)
-        initialize(rxnCrd);
-      double tmp = sin(gamma);
-      return  m_V0 * tmp * tmp;
-    }
-
-  private:
-
-      double m_V0;
-      double m_currentRxnCrd;
-      double m_threshold;
-
-  };
 
   class PhaseIntegral {
 
